--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "@vue/cli-service": "^3.0.3",
     "@vue/eslint-config-prettier": "^3.0.3",
     "@vue/eslint-config-typescript": "^3.0.3",
+    "axios": "^0.18.0",
     "less": "^3.0.4",
     "less-loader": "^4.1.0",
     "typescript": "^3.0.0",
+    "vue-cli-plugin-axios": "0.0.4",
     "vue-cli-plugin-iview": "^1.0.6",
     "vue-template-compiler": "^2.5.17"
   }
